MDEV-37063 Sporadic segmentation faults possibly related to vector search

Search_context is supposed to increase the refcnt of the context
it keeps the pointer to. It was doing so for MHNSW_Share, but not
for MHNSW_Trx that was created inside mhnsw_read_next().

This meant MHNSW_Trx could've been reset (when it overflowed),
even though Search_context still had results inside it.